--- a/cpp/{{ cookiecutter.project_name }}/{% if cookiecutter.include_python_extension != 'false' %}python{% endif %}/pyproject.toml
+++ b/cpp/{{ cookiecutter.project_name }}/{% if cookiecutter.include_python_extension != 'false' %}python{% endif %}/pyproject.toml
@@ -2,9 +2,6 @@
 name = "{{ cookiecutter.project_name }}"
 version = "0.1.0"
 description = "{{ cookiecutter.project_name }}"
-authors = [
-    {name = "Your Name",email = "you@example.com"}
-]
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
@@ -14,6 +11,8 @@ dependencies = [
 [tool.poetry]
 packages = [{include = "{{ cookiecutter.project_name }}"}]
 
+[tool.poetry.build]
+script = "build.py"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
